--- a/ICPC/i-conduit/Makefile
+++ b/ICPC/i-conduit/Makefile
@@ -1,4 +1,7 @@
 all:
-		@javac D.java
-		@java D < 1.in
-		
+	@javac D.java
+	@java D < 1.in
+run:
+	@javac D.java
+	@java D < 1.in > 1.out
+	@diff 1.out 1.ans
